--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <title>Cinema Seat Booking Application</title>
 </head>
 <body>
+        <div class="typing-demo">
+            Cinema Seat Booking Application
 
-    <h1>CİNEMA</h1>
-
+        </div>
+   
+    <div class="screen"></div>
     <div class="container">
         <div class="row">
             <div class="seat"></div>
@@ -101,6 +104,15 @@
     </div>
 </div>
 
+
+    <div class="movie-list">
+        <select name="" id="movie">
+            <option disabled="">FİLM SEÇİNİZ</option>
+            <option value="30">THE GODFATHER 3</option>
+            <option value="28">HOBBİT</option>
+            <option value="25">HARRY POTTER VE ÖLÜM YADİGARLARI</option>
+        </select>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
