--- a/index.html
+++ b/index.html
@@ -113,6 +113,21 @@
             <option value="25">HARRY POTTER VE ÖLÜM YADİGARLARI</option>
         </select>
     </div>
+
+    <ul class="info">
+        <li>
+            <div class="seat selected"></div>
+            <span>Seçili</span>
+        </li>
+        <li>
+            <div class="seat space"></div>
+            <span>Boş</span>
+        </li>
+        <li>
+            <div class="seat reserved"></div>
+            <span>Dolu</span>
+        </li>
+    </ul>
     <script src="app.js"></script>
 </body>
 </html>
