--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
         <div class="typing-demo">
             Cinema Seat Booking Application
-
         </div>
    
     <div class="screen"></div>
@@ -18,12 +17,12 @@
         <div class="row">
             <div class="seat"></div>
             <div class="seat"></div>
-            <div class="seat selected"></div>
-            <div class="seat selected"></div>
+            <div class="seat reserved"></div>
             <div class="seat"></div>
             <div class="seat"></div>
             <div class="seat"></div>
             <div class="seat"></div>
+            <div class="seat reserved"></div>
         </div>
     </div>
         <div class="row">
@@ -128,6 +127,9 @@
             <span>Dolu</span>
         </li>
     </ul>
+    <p class="text">
+        <span id="count">3</span> adet koltuk için hesaplanan ücret <span id="amount">60TL</span>
+    </p>
     <script src="app.js"></script>
 </body>
 </html>
