--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         </li>
     </ul>
     <p class="text">
-        <span id="count">3</span> adet koltuk için hesaplanan ücret <span id="amount">60TL</span>
+        <span id="count">3</span> adet koltuk için hesaplanan ücret <span id="amount">60</span> TL
     </p>
     <script src="app.js"></script>
 </body>
